--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -21,7 +21,13 @@
     <body>
         <header>
             <div id="title-container" class="header-item">
-                <h1 id="title">DHT11 Dashboard</h1>
+                <h1 id="title">
+                    <a
+                        href="/game"
+                        style="text-decoration: none; color: inherit"
+                        >DHT11 Dashboard</a
+                    >
+                </h1>
             </div>
             <div id="unit-converter-container" class="header-item">
                 <input
